# mrmd

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  format.sh
examples/: CMakeLists.txt  positions.txt
examples/00_IdealGas_NVE/: 00_IdealGas_NVE.cpp  CMakeLists.txt
examples/01_Argon_NVE/: 01_Argon_NVE.cpp  CMakeLists.txt
examples/01_LennardJones_NVT/: 01_LennardJones_NVT.cpp  CMakeLists.txt
examples/02_LennardJones_IdealGas_LocalCap/: 02_LennardJones_IdealGas_LocalCap.cpp  CMakeLists.txt
examples/02_LennardJones_NVE/: 02_LennardJones_NVE.cpp  CMakeLists.txt  lennardJonesNVT_final.gro  lennardJonesNVT_final.h5md
examples/02_MultiResArgon_LocalCap/: 02_MultiResArgon_LocalCap.cpp  CMakeLists.txt
examples/04_LennardJones_IdealGas_LocalCap/: 04_LennardJones_IdealGas_LocalCap.cpp  CMakeLists.txt
examples/05_LennardJones_Equilibration/: 05_LennardJones_EquilibrateBerendsen.cpp  05_LennardJones_EquilibrateLangevin.cpp  CMakeLists.txt  equilibrateBerendsen_final.h5md
examples/05_LennardJones_ThermoForce/: 05_00_LennardJones_EquilibrateBerendsen.cpp  05_01_LennardJones_EquilibrateLangevin.cpp  05_A02_LennardJones_AtomisticProduction.cpp  05_B02a_LennardJones_ThermodynamicForce.cpp  05_B02b_LennardJones_ThermodynamicForce_InitialGuess.cpp  05_B03_LennardJones_TracerProduction.cpp  05_LennardJones_AtomisticProduction.cpp  05_LennardJones_EquilibrateLangevin.cpp  CMakeLists.txt
examples/06_LennardJones_ProductionAtomistic/: 06_LennardJones_ProductionAtomistic.cpp  CMakeLists.txt  equilibrateLangevin_final.h5md
examples/07_LennardJones_ThermoForce/: 07_LennardJones_ThermodynamicForce.cpp  07_LennardJones_ThermodynamicForce_InitialGuess.cpp  CMakeLists.txt  thermodynamicForce_initialGuess.txt
examples/08_LennardJones_ProductionTracer/: 08_LennardJones_ProductionTracer.cpp  CMakeLists.txt
examples/Argon/: Argon.cpp  CMakeLists.txt  MultiResArgon.cpp  argon.py  multi_res_argon.py
examples/BinaryLennardJones/: BinaryLennardJones.cpp  BinaryLennardJones.py  CMakeLists.txt  NPT.cpp  NPT.hpp  NPT.py  NVT.cpp  NVT.hpp  SPARTIAN.cpp  SPARTIAN.hpp  SPARTIAN.py  initialization.cpp  initialization.hpp  initialization.py  input.yaml
examples/BubbleLJ/: BubbleLJ.cpp  CMakeLists.txt
examples/ComplexAtomics/: CMakeLists.txt  ComplexAtomics.cpp
examples/DensityFluctuations/: CMakeLists.txt  DensityFluctuations.cpp
examples/IdealGas/: CMakeLists.txt  IdealGas.cpp
examples/LennardJones/: CMakeLists.txt  LennardJones.cpp  push_performance.py
examples/PrintAtomsToGro/: CMakeLists.txt  PrintAtomsToGro.cpp
examples/SPC/: CMakeLists.txt  SPC.cpp
examples/SpartianLJ/: CMakeLists.txt  LJ_spartian_3.lammpstrj  SpartianLJ.cpp
examples/Vectorization/: CMakeLists.txt  vec.cpp
mrmd/: CMakeLists.txt  cmake.hpp.in  constants.hpp  datatypes.hpp  functional.hpp  gtest_main.test.cpp  initialization.cpp  initialization.hpp  mpi_helper.hpp  mpi_wrapper.hpp  version.hpp.in
mrmd/action/: BerendsenBarostat.cpp  BerendsenBarostat.hpp  BerendsenBarostat.test.cpp  BerendsenThermostat.cpp  BerendsenThermostat.hpp  BerendsenThermostat.test.cpp  CMakeLists.txt  ContributeMoleculeForceToAtoms.cpp  ContributeMoleculeForceToAtoms.hpp  ContributeMoleculeForceToAtoms.test.cpp  Coulomb.hpp  CoulombDSF.hpp  CoulombDSF.test.cpp  LJ_IdealGas.cpp  LJ_IdealGas.hpp  LJ_IdealGas.test.cpp  LangevinThermostat.cpp  LangevinThermostat.hpp  LangevinThermostat.test.cpp  LennardJones.cpp  LennardJones.hpp  LennardJones.test.cpp  LimitAcceleration.cpp  LimitAcceleration.hpp  LimitAcceleration.test.cpp  LimitVelocity.cpp  LimitVelocity.hpp  LimitVelocity.test.cpp  NoForce.cpp  NoForce.hpp  SPC.hpp  SPC.test.cpp  Shake.hpp  Shake.test.cpp  ThermodynamicForce.cpp  ThermodynamicForce.hpp  ThermodynamicForce.test.cpp  UpdateMolecules.hpp  UpdateMolecules.test.cpp  UpdateSteps.hpp  (+6 more)
mrmd/analysis/: AxialDensityProfile.cpp  AxialDensityProfile.hpp  AxialDensityProfile.test.cpp  CMakeLists.txt  CountingPlane.cpp  CountingPlane.hpp  CountingPlane.test.cpp  Fluctuation.cpp  Fluctuation.hpp  Fluctuation.test.cpp  KineticEnergy.cpp  KineticEnergy.hpp  KineticEnergy.test.cpp  MeanSquareDisplacement.cpp  MeanSquareDisplacement.hpp  MeanSquareDisplacement.test.cpp  Pressure.cpp  Pressure.hpp  SystemMomentum.cpp  SystemMomentum.hpp  SystemMomentum.test.cpp
mrmd/assert/: assert.hpp  device.hpp  host.hpp  normal.hpp  verbose.hpp
mrmd/communication/: AccumulateForce.cpp  AccumulateForce.hpp  AccumulateForce.test.cpp  CMakeLists.txt  GhostExchange.cpp  GhostExchange.hpp  GhostExchange.test.cpp  GhostLayer.hpp  MultiResGhostLayer.hpp  MultiResPeriodicGhostExchange.cpp  MultiResPeriodicGhostExchange.hpp  MultiResPeriodicGhostExchange.test.cpp  MultiResRealAtomsExchange.cpp  MultiResRealAtomsExchange.hpp  MultiResRealAtomsExchange.test.cpp  PeriodicMapping.cpp  PeriodicMapping.hpp  PeriodicMapping.test.cpp  UpdateGhostAtoms.cpp  UpdateGhostAtoms.hpp  UpdateGhostAtoms.test.cpp
mrmd/data/: Array.hpp  Atoms.hpp  Bond.hpp  CMakeLists.txt  EnergyAndVirialReducer.hpp  Histogram.cpp  Histogram.hpp  MPIInfo.hpp  MPIInfo.test.cpp  Molecules.hpp  MoleculesFromAtoms.cpp  MoleculesFromAtoms.hpp  MultiHistogram.cpp  MultiHistogram.hpp  MultiHistogram.test.cpp  Subdomain.cpp  Subdomain.hpp  Subdomain.test.cpp
mrmd/io/: CMakeLists.txt  DumpCSV.cpp  (+41 more)
pyMRMD/: CMakeLists.txt  action.cpp  action.hpp  analysis.cpp  analysis.hpp  cabana.cpp  cabana.hpp  communication.cpp  communication.hpp  data.cpp  data.hpp  io.cpp  io.hpp  pyMRMD.cpp  util.cpp  util.hpp  weighting_function.cpp  weighting_function.hpp
src/: AccumulateForce.hpp  App.cpp  App.hpp  CMakeLists.txt  HaloExchange.hpp  HaloExchange.test.cpp  Integrator.hpp  LJ.cpp  LennardJones.hpp  LennardJones.test.cpp  MPIInfo.hpp  Particles.hpp  PeriodicMapping.hpp  PeriodicMapping.test.cpp  Subdomain.hpp  Temperature.hpp  assert.hpp  checks.hpp  cmake.hpp.in  constants.hpp  datatypes.hpp  gtest_main.test.cpp  main.cpp  mpi_helper.hpp  normal_assert.hpp  vectorization.cpp  verbose_assert.hpp  version.hpp.in
(+251 files in other folders)
