# Copyright 2024 Sebastian Eibl
# 
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
# 
#     https://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_subdirectory(Argon)
add_subdirectory(BinaryLennardJones)
add_subdirectory(ComplexAtomics)
add_subdirectory(DensityFluctuations)
add_subdirectory(IdealGas)
add_subdirectory(LennardJones)
add_subdirectory(SPC)
add_subdirectory(SpartianLJ)
add_subdirectory(Vectorization)